--- a/Character.Shared/Character.Shared.csproj
+++ b/Character.Shared/Character.Shared.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -54,10 +54,25 @@
   <ItemGroup>
     <Compile Include="CharacterEvents.cs" />
     <Compile Include="Configuration.cs" />
+    <Compile Include="Models\Apparel\Component.cs" />
+    <Compile Include="Models\Apparel\ComponentTypes.cs" />
+    <Compile Include="Models\Apparel\Prop.cs" />
+    <Compile Include="Models\Apparel\PropTypes.cs" />
+    <Compile Include="Models\Appearance\Feature.cs" />
+    <Compile Include="Models\Appearance\FeatureColourTypes.cs" />
+    <Compile Include="Models\Appearance\FeatureTypes.cs" />
+    <Compile Include="Models\IAlias.cs" />
+    <Compile Include="Models\IApparel.cs" />
+    <Compile Include="Models\IAppearance.cs" />
+    <Compile Include="Models\ICharacter.cs" />
+    <Compile Include="Models\IFaceShape.cs" />
+    <Compile Include="Models\IHeritage.cs" />
+    <Compile Include="Models\ISession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
