--- a/Character.Server/Character.Server.csproj
+++ b/Character.Server/Character.Server.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -101,7 +101,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\CharacterEventArgs.cs" />
+    <Compile Include="Events\SessionEventArgs.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Alias.cs" />
+    <Compile Include="Models\Apparel.cs" />
+    <Compile Include="Models\Appearance.cs" />
+    <Compile Include="Models\Backstory.cs" />
+    <Compile Include="Models\Character.cs" />
+    <Compile Include="Models\FaceShape.cs" />
+    <Compile Include="Models\Heritage.cs" />
+    <Compile Include="Models\Session.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CharacterController.cs" />
     <Compile Include="Storage\StorageContext.cs" />
